[project]
name = "comfyui-anyline"
description = "A Fast, Accurate, and Detailed Line Detection Preprocessor.\nAnyline is a ControlNet line preprocessor that accurately extracts object edges, image details, and textual content from most images. Users can input any type of image to quickly obtain line drawings with clear edges, sufficient detail preservation, and high fidelity text, which are then used as input for conditional generation in Stable Diffusion."
version = "1.0.0"
license = { file = "LICENSE" }
dependencies = ["pathlib", "huggingface_hub", "scikit-image"]

[project.urls]
Repository = "https://github.com/TheMistoAI/ComfyUI-Anyline"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "themisto-ai"
DisplayName = "ComfyUI-Anyline"
Icon = ""
